Fix misaligned colored tags. Resolve #499
This only appeared on desktop browsers with a fixed scrollbar.

Regression introduced in 894028fd

--- a/src/scss/components/modal/_react-modal.scss
+++ b/src/scss/components/modal/_react-modal.scss
@@ -215,14 +215,6 @@
 	}
 }
 
-.modal-scrollbar-measure {
-	position: absolute;
-	top: -9999px;
-	width: 50px;
-	height: 50px;
-	overflow: scroll;
-}
-
 .modal-slide {
 	&.ReactModal {
 		&__Overlay {
